fix - Fixing a projects section paddings on mobile, tablet

--- a/src/components/mainNav/style.css
+++ b/src/components/mainNav/style.css
@@ -9,7 +9,7 @@
   position: relative;
   display: inline-block;
   padding: 1rem 0;
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-size: 16px;
   font-weight: 500;
@@ -72,7 +72,7 @@
     background-color: var(--color-white);
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
-    box-shadow: -2px 0 10px rgba(0,0,0,0.1);
+    box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
   }
 
   .nav-list__link {
@@ -92,6 +92,11 @@
 
   .nav-list__active {
     transform: translateX(0);
+  }
+
+  .nav-list__link:hover,
+  .nav-list__link:focus-visible {
+    transform: none;
   }
 }
 
